@@ -16,20 +16,20 @@ limitations under the License.
 
 package de.gematik.test.tiger.glue.fhir;
 
-import static org.assertj.core.api.Assertions.assertThat;
-
 import io.cucumber.java.en.Then;
+import lombok.SneakyThrows;
+
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.Comparator;
-import java.util.stream.Collectors;
-import lombok.SneakyThrows;
+
+import static org.assertj.core.api.Assertions.assertThat;
 
 public class Helper {
 
   @SneakyThrows
-  @Then("in {string} exists a file matching {string} containing all of the following lines:")
+  @Then("in {tigerResolvedString} exists a file matching {tigerResolvedString} containing all of the following lines:")
   public void inExistsAFileMatchingContainingAllOfTheFollowingLines(
       final String reportDir, final String reportFilePattern, final String expectedLines) {
 
@@ -43,7 +43,7 @@ public class Helper {
               .findFirst();
 
       final var lines =
-          expectedLines.lines().map(it -> (CharSequence) it).collect(Collectors.toList());
+          expectedLines.lines().map(it -> (CharSequence) it).toList();
 
       assertThat(report)
           .isPresent()
@@ -52,7 +52,7 @@ public class Helper {
   }
 
   @SneakyThrows
-  @Then("in {string} exists no file matching {string} containing any of the following lines:")
+  @Then("in {tigerResolvedString} exists no file matching {tigerResolvedString} containing any of the following lines:")
   public void inExistsNoFileMatchingContainingAnyOfTheFollowingLines(
       final String reportDir, final String reportFilePattern, final String expectedLines) {
 
@@ -66,7 +66,7 @@ public class Helper {
               .findFirst();
 
       final var lines =
-          expectedLines.lines().map(it -> (CharSequence) it).collect(Collectors.toList());
+          expectedLines.lines().map(it -> (CharSequence) it).toList();
 
       assertThat(report)
           .isPresent()
